--- a/art.html
+++ b/art.html
@@ -279,8 +279,8 @@
     </nav>
   </header>
 
-  <section class="gallery-hero">
-    <h1>Featured Cyberpunk Art</h1>
+<section class="content">
+  <h1 class="gradient-heading">Featured Art</h1>
 <p>Interested in having your art featured in the next issue? 
   <a href="submit.html" class="gradient-blue-text">Visit our Submit page.</a>
 </p>
